--- a/src/components/GameStats.css
+++ b/src/components/GameStats.css
@@ -1,5 +1,5 @@
 .gameStats {
-    border-style: solid;
     display: inline-block;
     border-radius: 5px;
+    text-align: center;
 }
